--- a/Html/Contacto.html
+++ b/Html/Contacto.html
@@ -18,10 +18,10 @@
 			<ul class="menu__ul">
 			  <div class="menu">
 
-				<li class="menu__li"><i class="fas fa-home"></i></i><a href="Home.html">Home</a></li>
+				<li class="menu__li"><i class="fas fa-home"></i></i><a href="index.html">Home</a></li>
 				<li class="menu__li"><i class="fas fa-phone"></i><a href="contacto.html">Contacto</a></li>
-				<li class="menu__li"><i class="fas fa-user-friends"></i><a href="nosotros.html">Sobre nosotros</a></li>
-				<li class="menu__li"><i class="fas fa-shopping-cart"></i><a href="carrito.html">Carrito</a></li>
+				<li class="menu__li"><i class="fas fa-user-friends"></i><a href="index.html">Sobre nosotros</a></li>
+				<li class="menu__li"><i class="fas fa-shopping-cart"></i><a href="index.html">Carrito</a></li>
 			  </div>
 			</ul>
 			<ul class="menumobile__ul">
@@ -30,9 +30,9 @@
 			   </div>
 			   <div class="menumobile__li-container">
 			  	<li class="menumobile__li"><i class="fas fa-home"></i></i><a href="">Home</a></li>
-				<li class="menumobile__li"><i class="fas fa-phone"></i><a href="contacto.html">Contacto</a></li>
-				<li class="menumobile__li"><i class="fas fa-user-friends"></i><a href="nosotros.html">Sobre nosotros</a></li>
-				<li class="menumobile__li"><i class="fas fa-shopping-cart"></i><a href="carrito.html">Carrito</a></li>
+				<li class="menumobile__li"><i class="fas fa-phone"></i><a href="index.html">Contacto</a></li>
+				<li class="menumobile__li"><i class="fas fa-user-friends"></i><a href="index.html">Sobre nosotros</a></li>
+				<li class="menumobile__li"><i class="fas fa-shopping-cart"></i><a href="index.html">Carrito</a></li>
 			 </div>
 			</ul>
 	     </nav>
