--- a/Html/Contacto.html
+++ b/Html/Contacto.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>My Import-Contacto</title>
-	<link rel="stylesheet" type="text/css" href="../Css/Contacto.css">
-    <link rel="stylesheet" type="text/css" href="../Css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="Contacto.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<script src="https://kit.fontawesome.com/1bc7aaf6e1.js" crossorigin="anonymous"></script>
