--- a/Html/index.html
+++ b/Html/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<script src="https://kit.fontawesome.com/1bc7aaf6e1.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-	<link rel="icon" href="../Multimedia/Logo.ico">
+	<link rel="icon" href="Logo.ico">
 </head>
 <body>
 <div class="grid-container">
@@ -48,13 +48,13 @@
 				</p>
 				<div class="trabajadores">
 					<h2 class="title">Trabajadores</h2>
-					<img src="../Multimedia/wil.jpg" class="wil">
+					<img src="wil.jpg" class="wil">
 				<p class="description">Contamos con trabajadores especializados en el tema, cuantan con años de experiencias, miles de ventas concretadas, y cientos de clientes sastifechos, son muy famosos por realizar estafas en todo al rededor del pais, este particularmente es wilfredo, un chico de 19 años que tiene mas de 45 años en el negocio, sea convertido en todoo un idolo para nuestras nuevas promesas, se dedica mayormente a la ventas de estupefacientes, se puede decir que este vendria siendo su fuerte o su campo con mayor experiencia, empezo como un novato ya ahora no hay nadie que lo detenga, muchos le dicen el vendedor del mes, yo le digo "el estafadore del mes"
 				</p>
 				</div>
 					<div class="trabajadores">
 					<h2 class="title">Nosotros como empresa</h2>
-					<img src="../Multimedia/logo.jpg" class="wil">
+					<img src="logo.jpg" class="wil">
 				<p class="description">Contamos con trabajadores especializados en el tema, cuantan con años de experiencias, miles de ventas concretadas, y cientos de clientes sastifechos, son muy famosos por realizar estafas en todo al rededor del pais, este particularmente es wilfredo, un chico de 19 años que tiene mas de 45 años en el negocio, sea convertido en todoo un idolo para nuestras nuevas promesas, se dedica mayormente a la ventas de estupefacientes, se puede decir que este vendria siendo su fuerte o su campo con mayor experiencia, empezo como un novato ya ahora no hay nadie que lo detenga, muchos le dicen el vendedor del mes, yo le digo "el estafadore del mes"
 				</p>
 				</div>
@@ -62,7 +62,7 @@
 		<div class="grid-item grid-aside">
 			<ul class="lateral">
 			  <div class="menu">
-				<img src="../Multimedia/logo.jpg" class="logo">
+				<img src="logo.jpg" class="logo">
 				<li class="lateral__li"><i class="fas fa-mobile-alt"></i></i><a href="productos.html"> Productos</a></li>
 				<li class="lateral__li"><i class="fas fa-user-circle"></i><a href="clientes.html"> Clientes</a></li>
 				<li class="lateral__li"><i class="fas fa-paper-plane"></i><a href="envios.html"> Envios</a></li>
